--- a/simulator/package.json
+++ b/simulator/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node": "^20.12.8",
     "commander": "^12.0.0",
-    "mqtt": "^5.5.5"
+    "mqtt": "^5.5.5",
+    "node-fetch": "^3.3.2"
   }
 }
