--- a/nodered/package.json
+++ b/nodered/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "node-red-contrib-jwt": "~0.1.0",
         "node-red-contrib-postgresql": "~0.14.0",
         "node-red-dashboard": "~3.6.5"
     }
