--- a/simulator/package.json
+++ b/simulator/package.json
@@ -1,5 +1,6 @@
 {
   "name": "simulator",
+  "type":"module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^20.12.8",
     "commander": "^12.0.0",
     "mqtt": "^5.5.5",
     "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.12",
+    "@tsconfig/strictest": "^2.0.5"
   }
 }
