--- a/nodered/package.json
+++ b/nodered/package.json
@@ -4,9 +4,9 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "node-red-contrib-calc": "~1.0.6",
         "node-red-contrib-jwt": "~0.1.0",
         "node-red-contrib-postgresql": "~0.14.0",
-        "node-red-contrib-rate-avg": "~0.0.3",
         "node-red-dashboard": "~3.6.5"
     }
 }
