--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
       NODE_RED_HTTP_ADMIN_ROOT: false
       NODE_RED_HTTP_NODE_ROOT: false
       NODE_RED_DISABLE_EDITOR: false
+  redis:
+    image: 7.2.5-alpine3.19
+    ports:
+      - "6379:6379"
   db:
     image: docker.io/postgres:16.3-alpine3.19
     ports:
