--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       NODE_RED_HTTP_NODE_ROOT: false
       NODE_RED_DISABLE_EDITOR: false
   redis:
-    image: 7.2.5-alpine3.19
+    image: docker.io/redis:7.2.5-alpine3.19
     ports:
       - "6379:6379"
   db:
