--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       NODE_RED_HTTP_ADMIN_ROOT: false
       NODE_RED_HTTP_NODE_ROOT: false
       NODE_RED_DISABLE_EDITOR: false
+      DB_IP: db
+      DB_PORT: 5432
   redis:
     image: docker.io/redis:7.2.5-alpine3.19
     ports:
