--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "simulate-arduino":"sudo $(which create_ap) wlp0s20f3 wlp0s20f3 jug_2 --freq-band 2.4 -g 192.168.4.1 --no-dnsmasq --daemon && sleep 5 && sudo dnsmasq --interface=ap0 --bind-interfaces --dhcp-range=192.168.4.2,192.168.4.255 -z -H hosts",
       "hostspot": "sudo $(which create_ap) wlp0s20f3 wlp0s20f3 islandwifi island01 --freq-band 2.4 -g 192.168.4.1 --no-dnsmasq --daemon && sleep 5 && sudo dnsmasq --interface=ap0 --bind-interfaces --dhcp-range=192.168.4.2,192.168.4.255 -z -H hosts",
       "stop-hotspot": "sudo pkill create_ap && sudo pkill dnsmasq",
-      "monitor":"stty -F /dev/ttyACM0 raw 9600 && cat /dev/ttyACM0"
+      "monitor":"stty -F /dev/ttyACM0 raw 9600 && cat /dev/ttyACM0",
+      "nodered-windows":"powershell -command 'get-content .env | foreach {$name, $value = $_.split(\"=\");set-content env:\\$name $value};bun run nodered'"
     }
 }
