--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DB_PASSWORD=passwordsegreta
 DB_DATABASE=jugdb
 THINGWORX_USERNAME=CattaneoIsola
 THINGWORX_PASSWORD=S4944382S4943369
+JWT_SECRET=jwtsecret
