--- a/simulator/package.json
+++ b/simulator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simulator",
-  "type":"module",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,7 +13,8 @@
   "dependencies": {
     "commander": "^12.0.0",
     "mqtt": "^5.5.5",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "redis": "^4.6.14"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
