--- a/nodered/package.json
+++ b/nodered/package.json
@@ -4,12 +4,13 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "@iorsan/node-red-contrib-firebase-cloud-messaging": "~2.0.0",
         "node-red-contrib-bcrypt": "~0.1.6",
         "node-red-contrib-calc": "~1.0.6",
+        "node-red-contrib-firebase-messaging": "~0.4.2",
         "node-red-contrib-jwt": "~0.1.0",
         "node-red-contrib-postgresql": "~0.14.0",
         "node-red-contrib-redis": "~1.3.9",
-        "node-red-dashboard": "~3.6.5"
+        "node-red-dashboard": "~3.6.5",
+        "settings": "^0.1.1"
     }
 }
